--- a/package.json
+++ b/package.json
@@ -1,31 +1,22 @@
 {
-  "name": "node-js-getting-started",
-  "version": "0.2.6",
-  "description": "A sample Node.js app using Express 4",
-  "engines": {
-    "node": "6.11.1"
-  },
+  "name": "dominionarpoja",
+  "version": "1.0.0",
+  "description": "arvo dominionpakkoja",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "node test.js"
-  },
-  "dependencies": {
-    "ejs": "2.5.6",
-    "express": "4.15.2"
-  },
-  "devDependencies": {
-    "request": "^2.81.0",
-    "tape": "^4.7.0"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "git+https://github.com/jon-erikklint/dominionarpoja.git"
   },
   "keywords": [
-    "node",
-    "heroku",
-    "express"
+    "dominion"
   ],
-  "license": "MIT"
+  "author": "jon-erik klint",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jon-erikklint/dominionarpoja/issues"
+  },
+  "homepage": "https://github.com/jon-erikklint/dominionarpoja#readme"
 }
